# timertui

./: README.md  pyproject.toml
src/timertui/: beeper.py  main.py  timer.tcss  timer_app.py  timer_widget.py
