[project]
name = "timertui"
version = "0.1.0"
description = "A beautiful terminal timer app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=6.0.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]

[project.scripts]
timer = "timertui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timertui"]
