[project]
name = "timertui"
version = "0.1.0"
description = "A beautiful terminal timer app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=6.0.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]

[project.scripts]
timertui = "timertui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timertui"]
